ingress-elb/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-nlb
  namespace: nlb-infra
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.cluster-hybrid.ddnsfree.com
        - awx.cluster-hybrid.ddnsfree.com
        - rancher.cluster-hybrid.ddnsfree.com
        - hubble.cluster-hybrid.ddnsfree.com
        - prometheus.cluster-hybrid.ddnsfree.com
      secretName: cluster-hybrid.ddnsfree.com-tls
  rules:
    - host: argocd.cluster-hybrid.ddnsfree.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-prd-server
                port:
                  number: 30080
    - host: awx.cluster-hybrid.ddnsfree.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awx-demo-service
                port:
                  number: 8052
    - host: rancher.cluster-hybrid.ddnsfree.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80
    - host: hubble.cluster-hybrid.ddnsfree.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
    - host: prometheus.cluster-hybrid.ddnsfree.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-grafana
                port:
                  number: 80
